# finess-ars-tool

./: .dockerignore  .env.example  .gitignore  Dockerfile  Finess-for-Laure.spec  README.md  alembic.ini  docker-compose.yml  gunicorn_conf.py  installer.iss  pyproject.toml  requirements-desktop.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
app/: config.py  database.py  desktop.py  logging_conf.py  main.py  models.py  paths.py  utils.py
app/routers/: cartographie.py  documents.py  etablissements.py  pilotage.py  qualite.py  reconciliation.py  workflow.py
app/services/: cartographie.py  documents.py  pilotage.py  qualite.py  reconciliation.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: base.html  cartographie.html  cartographie_anomalies.html  cartographie_zones.html  detail.html  import.html  index.html  pilotage.html  qualite.html  reconciliation.html  search.html  sirene.html
app/templates/documents/: generer.html  liste.html  resultat.html
app/templates/workflow/: detail.html  liste.html  nouveau.html
migrations/: env.py
migrations/versions/: 3becbeae2d4e_initial_schema.py
tests/: conftest.py  test_cartographie.py  test_documents.py  test_etablissements.py  test_pilotage.py  test_qualite.py  test_reconciliation.py  test_workflow.py
