[project]
name = "finess-ars-tool"
version = "0.3.0"
description = "Outil web d'assistance pour la gestion du répertoire FINESS (ARS)"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "error::DeprecationWarning:app.*",
    "error::DeprecationWarning:tests.*",
]
